/*
 * Copyright 2022 Block Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

message EmptyMessage {
}

message EmptyOmitted {
    enum EmptyEnum {
      UNKNOWN = 0;
      OTHER = 1;
    }

    message EmptyNested {
        int32 nested = 1;
    }

    int32 numeric_value = 1;
    string string_value = 2;
    bytes bytes_value = 3;
    bool bool_value = 4;
    EmptyEnum enum_value = 5;
    EmptyNested message_value = 6;
    repeated string repeated_value = 7;
    map<int32, string> map_value = 8;
}
